feature: adds click-to-fullscreen in display

--- a/display.html
+++ b/display.html
@@ -137,6 +137,8 @@
 
             scene = new THREE.Scene();
 
+            document.addEventListener('click', toggleFullScreen);
+
             const basePath = `/assets/`;
 
             new RGBELoader()
@@ -221,6 +223,31 @@
                 document.querySelectorAll('.eyelid').forEach(el => el.classList.remove('eyelid--closed'));
             }, 200);
         }
+
+        function toggleFullScreen() {
+            if (!document.fullscreenElement) {
+                if (document.documentElement.requestFullscreen) {
+                    document.documentElement.requestFullscreen();
+                } else if (document.documentElement.mozRequestFullScreen) { // Firefox
+                    document.documentElement.mozRequestFullScreen();
+                } else if (document.documentElement.webkitRequestFullscreen) { // Chrome, Safari and Opera
+                    document.documentElement.webkitRequestFullscreen();
+                } else if (document.documentElement.msRequestFullscreen) { // IE/Edge
+                    document.documentElement.msRequestFullscreen();
+                }
+            } else {
+                if (document.exitFullscreen) {
+                    document.exitFullscreen();
+                } else if (document.mozCancelFullScreen) { // Firefox
+                    document.mozCancelFullScreen();
+                } else if (document.webkitExitFullscreen) { // Chrome, Safari and Opera
+                    document.webkitExitFullscreen();
+                } else if (document.msExitFullscreen) { // IE/Edge
+                    document.msExitFullscreen();
+                }
+            }
+        }
+
 
         init();
         render();
